kf6-kstatusnotifieritem/TODO
fix this build error on NetBSD-10 (atleast)

[ 83%] Building CXX object src/CMakeFiles/KF6StatusNotifierItem.dir/libdbusmenu-qt/utils.cpp.
o
In file included from /usr/pkg/qt6/include/QtDBus/QDBusMetaType:1,
                 from /src/work/pkgsrc/misc/kf6-kstatusnotifieritem/work.x86_64/kstatusnotifi
eritem-6.2.0/src/libdbusmenu-qt/dbusmenutypes_p.cpp:15:
/usr/pkg/qt6/include/QtDBus/qdbusmetatype.h: In instantiation of 'QMetaType qDBusRegisterMeta
Type() [with T = DBusMenuShortcut]':
/src/work/pkgsrc/misc/kf6-kstatusnotifieritem/work.x86_64/kstatusnotifieritem-6.2.0/src/libdb
usmenu-qt/dbusmenutypes_p.cpp:97:45:   required from here
/usr/pkg/qt6/include/QtDBus/qdbusmetatype.h:35:59: error: no match for 'operator<<' (operand types are 'QDBusArgument' and 'const DBusMenuShortcut')
   35 |     auto mf = [](QDBusArgument &arg, const void *t) { arg << *static_cast<const T *>(t); };
      |                                                       ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
